feat(backend): enhance security, configuration, and service logic
Refactor backend services and configuration to improve flexibility and
functionality:

- Implement dynamic CORS origin configuration via environment variables
- Add scheduled task for automated rate alert checking
- Implement high-precision BigDecimal square root calculation in
  AdvisorService
- Externalize database and API configurations in application.yml
  using environment variables
- Update PortfolioResponse DTO and PortfolioService to fix redundant
  field mapping
- Integrate new API clients (alerts and advisor) in the frontend
- Update .gitignore to include .env and secrets directories